--- a/index1.css
+++ b/index1.css
@@ -130,3 +130,14 @@ button:hover{
         background: url(./images/bg-intro-mobile.png), hsl(0, 100%, 74%);
     }
 }
+
+#delete-me{
+    width:50%;
+    height: 60px;
+    border: 2px outset rgba(128, 128, 128, 0.519);
+    border-radius: 7px;
+    background-color: rgb(58, 47, 11);
+    margin:auto;
+    padding: 40px;
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.411);
+}
